add support for deleting participants

--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -151,6 +151,31 @@ button:hover {
 }
 
 .participants ul {
+  list-style-type: none;
+  /* Hide bullet points */
+  padding-left: 0;
+}
+
+.participants li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.participants .delete-icon {
+  cursor: pointer;
+  color: #c62828;
+  font-size: 16px;
+  margin-left: 10px;
+  transition: color 0.2s;
+}
+
+.participants .delete-icon:hover {
+  color: #ff5252;
+}
+
+.participants ul {
   list-style-type: disc;
   margin-left: 20px;
   color: #333;
